force-app/main/default/objects/Country__c/fields/RegionalBlocsAcronym__c.field-meta.xml
<CustomField>
    <fullName>RegionalBlocsAcronym__c</fullName>
    <label>RegionalBlocsAcronym</label>
    <length>20</length>
    <type>Text</type>
</CustomField>