force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alpha2Code__c</columns>
    <columns>Alpha3Code__c</columns>
    <columns>Capital__c</columns>
    <columns>Region__c</columns>
    <columns>RegionalBlocsAcronym__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>